css/style.css
/* ... */
.post-detail-view .footer-post-operations {
    width: 100%;
}
/* Recent post End */

/* Start Book marks */
.bookmarks .bookmark-container {
    padding: 8px 16px;
    word-wrap: normal;
}
.bookmarks .bookmark-container h2 {
    margin-bottom: 2px;
    font-size: 16px;
}
.bookmarks .bookmark-container p span, 
.post-item-content p span ,
.post-detail-view .post-item-title p span{
    color: #000;
}
/* Bookmarks End */

/* Categories */
.categories a.item {
    padding: 12px 10px 10px 50px;
    min-height: 58px;
}
.categories a.item img {
    max-width: 30px;
    max-height: 30px;
    top: 12px;
}
.categories a.item h2 {
    font-size: 16px;
}
.categories a.item p {
    font-size: 14px;
    color: #999;
}
.categories a.item .icon {
    color: #484448;
}

.post-view .comments .item .message-content {
    overflow: inherit;
    text-overflow: inherit;
    white-space: normal;
}
.post-view .comments .item .message-content p {
    overflow: inherit;
    text-overflow: inherit;
    white-space: normal;
}
.post-view .comments h2 {
    color: #444;
    font-weight: 700;
}
.post-view .comments .comment-date {
    color: #777;
    font-weight: 400;
    font-size: 12px;
}
.post-view .comments .highlighted {
    background-color: #d7f5df;
}
.post-view .new-comment {
    height: 100px;
    background-color: #444;
    background-size: 100% 0;
   /* bottom: 60px; */
   bottom: 0;
}
.post-view .new-comment .col {
    padding: 0;
}
.post-view .new-comment .new-comment-message {
    border: 1px solid #1e1e1e;
    padding: 6px;
    border-radius: 5px;
    width: 100%;
}
.post-view .new-comment .button-container {
    text-align: center;
}
.post-view .new-comment .button-container .button.send {
    color: #e6e6e6;
    font-weight: 500;
    font-size: 16px;
}

.bar-footer {
    bottom: 0;
    border-top-width: 1px;
    border-bottom-width: 0;
    background-position: top;
    height: 44px;
}
.bar-footer.item-input-inset {
    position: absolute
} 
.bar-footer.app-footer {
    background: transparent;
    height: 60px;
    
}
.ionic-scroll.has-footer {
    bottom: 55px;
}
.post-detail-view .has-footer {
   /* bottom: 170px; */
   bottom: 110px;
}

.action-sheet-wrapper .action-sheet-title {
    font-size: 16px;
    font-weight: bold;
}
.app-footer .app-footer-wrapper {
    width: 100%;
    padding: 5px 0;
}
.bar-footer.app-footer span{
    width: 100%;
    text-align: center;
    font-family: sans-serif;
    font-size: 12px;
    display: inline-block;
}
.bar-footer.app-footer span:first-child {
    font-size: 14px;
}
.bar-footer.app-footer span:last-child {
    font-style: italic;
}

.offline-view,.offline-view ion-content {
    margin: auto 0;
    width: 100%;
    height: 100%;
    text-align: center;
    top: 50%;
}
.wp-audio-shortcode {
    visibility: visible !important;
}
audio::-webkit-media-controls-panel {
    width: 100% !important;
}
audio:not([controls]) {
    display: none;
    height: 0
}

.platform-android .action-sheet .action-sheet-title {
    font-size: 16px;
    font-weight: bold;
}
.platform-android .action-sheet .button.destructive {
    color: #ff3b30;
}
.platform-android .action-sheet .action-sheet-title, .platform-android .action-sheet .button {
    text-align: center; 
    border-color: #d1d3d6;; 
    font-size: 16px;
    color: #8f8f8f;
}
.platform-android .action-sheet .button {
    display: block;
    padding: 1px;
    width: 100%;
    border-radius: 0;
    border-color: #d1d3d6;
    background-color: transparent;
    color: #007aff;
    font-size: 21px;
}
.platform-android .action-sheet {
    margin-left: 8px;
    margin-right: 8px;
}
.platform-android .action-sheet-group {
    margin-bottom: 8px;
    border-radius: 4px;
    background-color: #fff;
}
.platform-android .action-sheet-cancel {
   display: block;
}

.register-view ion-content .scroll, 
.login-view ion-content .scroll{
    height: 100%;
}

.register-view ion-content .scroll-bar,
.login-view ion-content .scroll-bar{
   display: none;
}

@media ( max-height: 450px ) {
    .register-view ion-content,
    .login-view ion-content{
        bottom: 60px;
    }
    
    .register-view ion-content .scroll-bar,
    .login-view ion-content .scroll-bar{
       display: block;
    }
}

.main-menu ion-content {
    bottom: 60px;
}

@media ( max-height: 380px ) {
    .greet-view .head-title {
        padding-top: 0;
    }
}
/*.bar.login-header {
    color: #fff;
    
    background-color: #00619D;
    background-image: linear-gradient(0deg, #0c63ee, #0c63ee 50%, transparent 50%); 
    color: #fff;
    background: transparent;
    height: 100%;
    border: 0 none;
    max-height: 175px;
}
.bar.login-header div {
    width: 100%;
    padding: 65px 0 20px 0;
}
.bar.login-header h3 {
    font-size: 48px;
    text-shadow: 0 1px 0 #000;
    color: #fff;
    font-weight: 800;
    font-family: sans-serif;
}
.bar.login-header h4 {
    font-size: 13px;
    font-weight: bold
}
.bar.login-header h3, .bar.login-header h4 {
    color: #fff;
}
.login-view .form-wrapper:before {
    margin-top: 130px;
}*/

